# nonebot-plugin-anipusher

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
nonebot-plugin-anipusher/: __init__.py  starter.py  target.json
nonebot-plugin-anipusher/config/: __init__.py
nonebot-plugin-anipusher/constants/: error_handling.py
nonebot-plugin-anipusher/core/: health_checker.py
nonebot-plugin-anipusher/core/commands_core/: __init__.py  check.py  function.py  subscribe.py
nonebot-plugin-anipusher/core/monitor_core/: abstract_processor.py  monitor.py
nonebot-plugin-anipusher/core/monitor_core/processor/: anime_process.py  anirss_processor.py  emby_processor.py
nonebot-plugin-anipusher/core/push_core/: __init__.py  fill.py  handler.py  image_service.py  message_builder.py  push_service.py
nonebot-plugin-anipusher/database/: database.db  db_health_check.py  db_models.py  db_operations.py
nonebot-plugin-anipusher/exceptions/: plugin_errors.py
nonebot-plugin-anipusher/others/: utils.py
nonebot-plugin-anipusher/utils/: __init__.py  common_utlis.py  emby_utlis.py  time_utils.py
plugins/nonebot_plugin_AniPush/: __init__.py
plugins/nonebot_plugin_AniPush/config/: __init__.py  config.py  global_config.py  json_io.py
plugins/nonebot_plugin_AniPush/database/: database_manager.py  db_health_check.py
plugins/nonebot_plugin_anipusher/: __init__.py
plugins/nonebot_plugin_anipusher/config/: target_tamplate.json
plugins/nonebot_plugin_anipusher/database/: __init__.py  dao.py  query_builder.py  table_structure.py
(+13 files in other folders)
